pod-hello2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-hello2
  labels:
    name: pod-hello2
spec:
  containers:
  - name: pod-hello2
    image: khaosdoctor/configmap-node-api-file
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 8085
        name: "port-pod-hello"
    volumeMounts:
      - mountPath: "/pod/config"
        name: "cm-volume"
  volumes:
    - name: "cm-volume"
      configMap:
        name: "config-map"
