pod-mongo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongo-pod
  labels:
    role: database
spec:
  containers:
  - name: mongo-pod
    image: mongo
    ports:
      - containerPort: 27017
        name: "mongo-port"
    volumeMounts:
      - name:  "mongo-volume"
        mountPath:  "/data/db"    
  volumes:
    - name: "mongo-volume"
      persistentVolumeClaim:
        claimName: "mongo-pvc"
