pod-secret-env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-secret-env
  labels:
    name: secret-env
spec:
  containers:
  - name: pod-secret-env
    image: khaosdoctor/node-crypto-api-env
    ports:
      - containerPort: 8083
        name:  "port-pod-env"
