pod-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-secret
  labels:
    name: secret
spec:
  containers:
  - name: pod-secret
    image: khaosdoctor/node-crypto-api-file
    ports:
      - containerPort: 8082
        name:  "port-pod-secret"
    volumeMounts:
      - name: "secret-volume"
        mountPath: "/crypto"
        readOnly: true
  volumes:
    - name: "secret-volume"
      secret:
        secretName: "secret-aes"
