pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-pod
  labels:
    name: api-pod
    env: dev
spec:
  containers:
  - name: api
    image: juancarllos88/node-api
    resources:
      requests:
        cpu: "100m"
        memory: "128M"      
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 8080
        name: "port-api"
