service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name:  api-pod-svc
spec:
  selector:
    name: api-pod
    env: dev
  #type:  LoadBalancer | ClusterIP | NodePort
  type: "NodePort"
  ports:
  - port:  80
    #nodePort: 30526
    #targetPort:  8080
    targetPort: "port-api"
