service-secret.yaml
apiVersion: v1
kind: Service
metadata:
  name:  secret-svc
spec:
  selector:
    name: secret
  #type:  LoadBalancer | ClusterIP | NodePort
  type: "NodePort"
  ports:
  - port:  82
    nodePort: 30527
    #targetPort:  8080
    targetPort: "port-pod-secret"
