service-volume.yaml
apiVersion: v1
kind: Service
metadata:
  name:  counter-api-svc
spec:
  selector:
    app: counter-api
  #type:  LoadBalancer | ClusterIP | NodePort
  type: "NodePort"
  ports:
  - port:  81
    nodePort: 30526
    #targetPort:  8080
    targetPort: "port-count-api"
