ingress-volume.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter-ap-ingress
  labels:
    name: counter-api-ingress
spec:
  rules:
  - host: "counterapi.info.192.168.49.2.nip.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: "counter-api-svc"
            port: 
              number: 81
